@@ -3,8 +3,7 @@
 \page compiling_crashrpt Compiling CrashRpt
 
 By default, CrashRpt archive's \b bin directory contains binary files 
-compiled in Visual Studio 2005. These 
-files are provided for demonstration purposes only. 
+compiled in Visual Studio 2010. These files are provided for demonstration purposes only. 
 It is strongly recommended that you compile CrashRpt yourself using 
 your version of Visual Studio. This is needed to ensure CrashRpt 
 uses the same version of C run-time libraries (CRT) as your 
@@ -12,19 +11,16 @@ application does.
 
 \section building_solution Building Solution
 
-You can compile CrashRpt in <b>Visual C++ 2005</b>
-and later versions, and in <b>Visual C++ Express</b>.
+The top-level directory of CrashRpt distribution contains solution file
+for Visual Studio 2010 (<b>CrashRpt_vs2010.sln</b>). Open this solution file
+to compile CrashRpt in <b>Visual C++ 2010</b> or in <b>Visual C++ Express 2010</b>.
 
-Open one of solution files available in the top level directory of 
-CrashRpt distribution, depending on your version of Visual Studio:
-  - <b>CrashRpt_vs2005.sln</b> if you use Visual C++ 2005, Visual C++ 2005 Express, 
-    Visual C++ 2008 or Visual C++ 2008 Express. Visual Studio will convert project 
-    files to the right format.
-  - <b>CrashRpt_vs2010.sln</b> if you use Visual C++ 2010 or Visual C++ 2010 Express.
+If you use another version of Visual Studio, you can generate solution/project files
+for your version of Visual Studio using CMake. See below for instructions.
 
 \section cmake_build Generating Project Files with CMake
 
-<b>Since v.1.3.0</b>, you can also generate Visual Studio project files using 
+<b>Since v.1.3.0</b>, you can generate Visual Studio project files using 
 <a href="http://www.cmake.org/">CMake</a> cross-platform make system. Although CrashRpt
 doesn't support operating systems other than Windows and doesn't support compilers other
 than Visual C++, CMake is useful, because it makes it easier to maintain multiple build
@@ -33,14 +29,27 @@ configurations between different versions of Visual Studio.
 To generate CrashRpt solution/project files for your favorite version of Visual Studio 
 with CMake, do the following:
 
-- Download <a href="http://www.cmake.org/">CMake</a> (version 2.8 or later) and install it. This will create CMake shortcuts in All Programs menu in the Start menu.
+- Download <a href="http://www.cmake.org/">CMake</a> (version 2.8 or later) and install it. 
+  This will create CMake shortcuts in All Programs menu in the Start menu.
 - Run CMake (cmake-gui) application. This will display the cmake-gui window.
-- In the <i>Where is the source code:</i> field, enter the path to your top-level directory of CrashRpt distribution. The top-level directory and its subdirectories contain CMakeLists.txt files which are CMake configuration files.
-- In the <i>Where to build the binaries:</i> field, enter the path to the directory where you want to generate project files. It is recommended to enter the path to your top-level directory of CrashRpt distribution here, too.
-- In the option list, modify build options as you wish. For example, unchecking the <i>CRASHRPT_BUILD_SHARED_LIBS</i> option will force CrashRpt to build static libs instead of DLLs.
-- Press the <i>Configure</i> button. When prompted, select your version of Visual Studio from the list. If everything is OK, you should see the message "Configuring done".
-- Press the <i>Generate</i> button. This will generate project files to the directory you have specified. If everything is OK, you should see the message "Generating done".
-- And finally, go to the directory you have specified in the <i>Where to build the binaries:</i> field. You should see <b>CrashRpt.sln</b> file you can use to compile CrashRpt.
+- In the <i>Where is the source code:</i> field, enter the path to your top-level directory 
+  of CrashRpt distribution. The top-level directory and its subdirectories contain CMakeLists.txt 
+  files which are CMake configuration files.
+- In the <i>Where to build the binaries:</i> field, enter the path to the directory where you want 
+  to generate project files. It is recommended to enter the path to your top-level directory of 
+  CrashRpt distribution here, too.
+- In the option list, modify build options as you wish. 
+     - <i>CRASHRPT_BUILD_SHARED_LIBS</i> option controls whether to build CrashRpt as DLL or as a static LIB.
+	   It is recommended that you have this checked. Unchecking the <i>CRASHRPT_BUILD_SHARED_LIBS</i> option will force CrashRpt to build static libs instead of DLLs.
+	 - <i>CRASHRPT_LINK_CRT_AS_DLL</i> option controls how CrashRpt should be linked to C run-time (CRT) libraries.
+	   Unchecking this option will force CrashRpt to link CRT as a multi-threaded static library.
+	   It is recommended that you have this checked, which results in linking CRT as multi-threaded DLL.
+- Press the <i>Configure</i> button. When prompted, select your version of Visual Studio from the list. 
+  If everything is OK, you should see the message "Configuring done".
+- Press the <i>Generate</i> button. This will generate project files to the directory you have specified. 
+  If everything is OK, you should see the message "Generating done".
+- And finally, go to the directory you have specified in the <i>Where to build the binaries:</i> field. 
+  You should see <b>CrashRpt.sln</b> file that you can use to compile CrashRpt.
    
 \section solution_structure CrashRpt Solution Structure
   
