@@ -4,9 +4,9 @@
 
 \note CrashRpt distribution archive contains compiled demo applications for demonstration purposes. 
 If you run the compiled demos from \c bin folder and do not compile them yourself, you might
-experience some problems if Visual C++ 2005 Redistributable files are not installed on your machine. 
+experience some problems if Visual C++ 2010 Redistributable files are not installed on your machine. 
 There may be error messages like 'The application configuration is incorrect' and so on.
-If you do not have Visual C++ 2005 Redistributable on your machine and do not want to install it, 
+If you do not have Visual C++ 2010 Redistributable on your machine and do not want to install it, 
 please compile the solution yourself as described in \ref compiling_crashrpt.
 
 \section crashrpttest About CrashRptTest Demo
