@@ -97,6 +97,11 @@
 #define ID_ENCODING_UTF16               32801
 #define ID_ENCODING_UTF32802            32802
 #define ID_ENCODING_UTF16BE             32803
+#define ID_Menu32804                    32804
+#define ID_MENU6_SELECTALL              32805
+#define ID_MENU6_DESELECTALL            32806
+#define ID_MENU6_DELETESELECTED         32807
+#define ID_MENU6_DELETEALL              32808
 #define IDS_CONTENT_TYPE                57346
 #define IDS_HEADER                      57610
 #define IDS_MESSAGE                     57611
@@ -112,7 +117,7 @@
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        217
-#define _APS_NEXT_COMMAND_VALUE         32804
+#define _APS_NEXT_COMMAND_VALUE         32809
 #define _APS_NEXT_CONTROL_VALUE         1048
 #define _APS_NEXT_SYMED_VALUE           101
 #endif
